# felix

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
catch/: CMakeLists.txt  catch_String.cpp
include/felix/: Graphemes.hpp  String.hpp  StringStorage.hpp
src/: String.cpp
